common-applications/control/infra-monitor/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app: infra-monitor
  name: infra-monitor
