common-applications/control/infra-monitor/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-website
  namespace: infra-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prometheus
  template:
    metadata:
      labels:
        app: prometheus
    spec:
      containers:
      - args:
        - --config.file=/etc/prometheus/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --storage.tsdb.retention=7d
        name: prometheus
        image: swr.cn-north-4.myhuaweicloud.com/opensourceway/monitor/prometheus:v2.38.0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
          name: http
          protocol: TCP
        resources:
          requests:
            cpu: 200m
            memory: 1500Mi
          limits:
            cpu: 500m
            memory: 1500Mi
        volumeMounts:
        - mountPath: /prometheus
          name: static-data
        - mountPath: /etc/prometheus/
          name: prometheus-config
      volumes:
      - name: static-data
        persistentVolumeClaim:
          claimName: prometheus-data-volume
      - name: prometheus-config
        configMap:
          name: prometheus-configmap
