common-applications/control/infra-monitor/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-website-service
  namespace: infra-monitor
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-gateway-service
  namespace: infra-monitor
spec:
  ports:
  - name: http-port1
    protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: prometheus-gateway
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-gateway2-service
  namespace: infra-monitor
spec:
  ports:
  - name: http-port1
    protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: prometheus-gateway2
  type: ClusterIP

---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-gateway3-service
  namespace: infra-monitor
spec:
  ports:
  - name: http-port1
    protocol: TCP
    port: 8000
    targetPort: 8000
  selector:
    app: prometheus-gateway3
  type: ClusterIP
