common-applications/control/infra-monitor/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: prometheus-ingress
  namespace: infra-monitor
spec:
  tls:
    - hosts:
        - monitor.osinfra.cn
      secretName: monitor-tls
  rules:
    - host: monitor.osinfra.cn
      http:
        paths:
        - backend:
            serviceName: oauth2-proxy
            servicePort: 4180
          path: /
